# DataForge

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
dataforge/: __init__.py  config.py  constants.py  exceptions.py  logger.py  types.py  utils.py
dataforge/api/: __init__.py  base.py  cost_tracker.py  cost_tracker_singleton.py  openai_client.py  rate_limiter.py  retry_handler.py  tavily_client.py
dataforge/cli/: export.py  main.py  process.py  scrape.py
dataforge/exporters/: __init__.py  csv_exporter.py
dataforge/scrapers/: base.py  tavily_scraper.py
dataforge/storage/: api_cache.py
dataset/hallucinations_in_llm/: dataset_card.json  test.jsonl  train.jsonl  val.jsonl
datasets/Autism_Spectrum_Disorder/: dataset_card.json  train.jsonl  val.jsonl
datasets/asd.csv/: test.csv  train.csv  val.csv
datasets/reinforcment_learning/: dataset_card.json  test.jsonl
docs/: api_integration_guide.md  architecture.md  cost_optimization.md  user_guide.md
examples/: example_tavily_search.py
tests/test_exporters/: test_csv_exporter.py
